# xmtdx

./: .gitignore  README.md  pyproject.toml
scripts/: probe_unknowns.py  test_report_block.py  verify_block_info.py  verify_fixes_20260415.py  verify_limits.py  verify_report_file.py
src/xmtdx/: __init__.py  client.py  exceptions.py
src/xmtdx/codec/: datetime_.py  frame.py  price.py  price_rules.py  volume.py
src/xmtdx/commands/: block_info.py  company_info.py  finance_info.py  fund_flow.py  minute_time.py  report_file.py  security_bars.py  security_count.py  security_list.py  security_quotes.py  transaction.py  xdxr_info.py
src/xmtdx/models/: __init__.py  enums.py  finance.py  quote.py  security.py  stats.py  timeseries.py
src/xmtdx/transport/: async_.py  sync.py
tests/fixtures/: minute_time.json  security_list.json
tests/integration/: test_live_client.py
tests/unit/: test_a_share_extensions.py  test_async_transport.py  test_block_info.py  test_codec_datetime.py  test_codec_frame.py  test_codec_price.py  test_codec_volume.py  test_commands_offline.py  test_decode_errors.py  test_heartbeat.py  test_protocol_fixes.py  test_sync_transport.py
