[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xmtdx"
version = "0.1.1"
description = "通达信 TCP 协议 A 股行情数据客户端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "mypy>=1.9", "ruff>=0.4"]
pandas = ["pandas>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/xmtdx"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
